--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
+    <button id="menu-toggle" aria-label="Menu">
+        <i class="fas fa-bars"></i> 
+    </button>
+    <nav id="mobile-nav">
         <ul class="left-links">
             <li>
                 <img src="./img/logo.png" alt="Logo" class="nav-logo">
@@ -204,7 +207,32 @@
     
 
     <footer>
-        <p>&copy; 2024 Elepochan. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="footer-left">
+                <p>&copy; 2024 Elepochan. All rights reserved.</p>
+            </div>
+    
+            <div class="footer-right">
+                <img src="./img/footer_img.jpg" alt="Footer Logo">
+                <ul class="social-links">
+                    <li>
+                        <a href="https://www.linkedin.com/in/lucas-schuler-foppa-24723b272/" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/elebeg" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/elepochan/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <script src="app.js"></script>
