--- a/index.html
+++ b/index.html
@@ -127,48 +127,48 @@
                 <i class="fab fa-js"></i>
                 <span>JavaScript</span>
                 <div class="skill-description">
-                    <p>JavaScript é uma linguagem de programação amplamente utilizada para desenvolvimento web.</p>
+                    <p>JavaScript is a widely used programming language for web development.</p>
                 </div>
             </div>
             <div class="skill-item react">
                 <i class="fa-brands fa-react"></i>
                 <span>React</span>
                 <div class="skill-description">
-                    <p>React é uma biblioteca JavaScript para criar interfaces de usuário, especialmente para aplicações de uma única página.</p>
+                    <p>React is a JavaScript library for building user interfaces, especially for single-page applications.</p>
                 </div>
             </div>
             <div class="skill-item node">
                 <i class="fab fa-node-js"></i>
                 <span>Node.js</span>
                 <div class="skill-description">
-                    <p>Node.js é um ambiente de execução JavaScript no lado do servidor, usado para construir aplicações escaláveis.</p>
+                    <p>Node.js is a JavaScript runtime environment for the server side, used to build scalable applications.</p>
                 </div>
             </div>
             <div class="skill-item django">
-                <i class="fab fa-python"></i> 
+                <i class="fab fa-python"></i>
                 <span>Django</span>
                 <div class="skill-description">
-                    <p>Django é um framework web para Python, que facilita o desenvolvimento rápido de aplicações seguras e escaláveis.</p>
+                    <p>Django is a Python web framework that facilitates rapid development of secure and scalable applications.</p>
                 </div>
             </div>
             <div class="skill-item nest">
                 <img src="./img/Nest.JS_logo.svg" alt="Nest.js Logo" />
                 <span>Nest.js</span>
                 <div class="skill-description">
-                    <p>Nest.js é um framework de Node.js que usa TypeScript e fornece uma arquitetura escalável para desenvolvimento de backend.</p>
+                    <p>Nest.js is a Node.js framework that uses TypeScript and provides a scalable architecture for backend development.</p>
                 </div>
             </div>
             <div class="skill-item git">
                 <i class="fab fa-git-alt"></i>
                 <span>Git</span>
                 <div class="skill-description">
-                    <p>Git é um sistema de controle de versão distribuído, utilizado para acompanhar alterações em arquivos e colaborar em projetos de desenvolvimento de software.</p>
+                    <p>Git is a distributed version control system used to track changes in files and collaborate on software development projects.</p>
                 </div>
             </div>
             <div class="skill-item aws">
                 <i class="fab fa-aws"></i>
                 <div class="skill-description">
-                    <p>Amazon Web Services (AWS) é uma plataforma de serviços em nuvem que oferece uma variedade de serviços, como computação, armazenamento e redes, para construir e hospedar aplicações na web.</p>
+                    <p>Amazon Web Services (AWS) is a cloud service platform offering a variety of services like computing, storage, and networking to build and host web applications.</p>
                 </div>
             </div>
         </div>
@@ -182,7 +182,7 @@
         <section id="projects" class="projects-section">
             <h2 class="projects-text">                   
                 <span class="white-text">My</span>
-                <span class="blue-text">Projetcs</span>
+                <span class="blue-text">Projects</span>
             </h2>
             <div class="projects">
                 <div class="project-card">
