--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <header id="welcome" class="welcome-section">
         <div class="content">
-            <img src="./img/logo.png" alt="Imagem" class="welcome-image">
+            <img src="./img/Tela_principal.png" alt="Imagem" class="welcome-image">
             <div class="text">
                 <h1 class="welcome-text">
                     <span class="blue-text">Wel</span>
