--- a/index.html
+++ b/index.html
@@ -197,6 +197,14 @@
                     <a href="https://www.aabbjdsreservas.com/" target="_blank">View Project</a>
                 </div>
                 <div class="project-card">
+                    <img src="./img/Tela_Amene.png" alt="StudeoAmene" class="project-image">
+                    <h3>StudeoAmene - Landing Page</h3>
+                    <p>
+                        A modern, interactive landing page developed for showcasing services with smooth animations. The page features dynamic service cards that expand with detailed information when clicked, offering a visually engaging user experience with parallax scrolling effects.
+                    </p>
+                    <a href="https://elebeg.github.io/amene/" target="_blank">View Project</a>
+                </div>
+                <div class="project-card">
                     <img src="./img/Tela_chat.png" alt="Real-Time Chat" class="project-image">
                     <h3>Real-Time Chat</h3>
                     <p>
